@@ -1,4 +1,4 @@
-/* $Id: laser.c,v 1.8 2003-10-04 03:14:47 btb Exp $ */
+/* $Id: laser.c,v 1.9 2003-10-10 00:24:38 btb Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -28,7 +28,7 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
 #endif
 
 #ifdef RCS
-char laser_rcsid[] = "$Id: laser.c,v 1.8 2003-10-04 03:14:47 btb Exp $";
+char laser_rcsid[] = "$Id: laser.c,v 1.9 2003-10-10 00:24:38 btb Exp $";
 #endif
 
 #include <stdlib.h>
@@ -2058,12 +2058,10 @@ extern void blast_nearby_glass(object *objp, fix damage);
 void create_smart_children(object *objp, int num_smart_children)
 {
 	int	parent_type, parent_num;
-#ifndef SHAREWARE
 	int	make_sound;
 	int	numobjs=0;
 	int	objlist[MAX_OBJDISTS];
 	int	blob_id;
-#endif
 
 	if (objp->type == OBJ_WEAPON) {
 		parent_type = objp->ctype.laser_info.parent_type;
@@ -2080,13 +2078,10 @@ void create_smart_children(object *objp, int num_smart_children)
 	if (objp->id == EARTHSHAKER_ID)
 		blast_nearby_glass(objp, Weapon_info[EARTHSHAKER_ID].strength[Difficulty_level]);
 
-#ifndef SHAREWARE
-#if 0
 // -- DEBUG --
 	if ((objp->type == OBJ_WEAPON) && ((objp->id == SMART_ID) || (objp->id == SUPERPROX_ID) || (objp->id == ROBOT_SUPERPROX_ID) || (objp->id == EARTHSHAKER_ID)))
 		Assert(Weapon_info[objp->id].children != -1);
 // -- DEBUG --
-#endif
 
 	if (((objp->type == OBJ_WEAPON) && (Weapon_info[objp->id].children != -1)) || (objp->type == OBJ_ROBOT)) {
 		int	i, objnum;
@@ -2193,7 +2188,6 @@ void create_smart_children(object *objp, int num_smart_children)
 			make_sound = 0;
 		}
 	}
-#endif
 }
 
 int Missile_gun = 0;
